Change styles for avoiding hover on mobile

--- a/src/BookABed/BookABed.module.css
+++ b/src/BookABed/BookABed.module.css
@@ -17,12 +17,15 @@
     background-color: white;
     border-radius: 10px;
     border: 1px solid bisque;
+    color: #0B3D2E;
 }
 
-.bookButton:hover {
-    background-color: bisque;
-    cursor: pointer;
-    
+
+@media (hover: hover) and (pointer: fine) {
+    .bookButton:hover {
+        background-color: bisque;
+        cursor: pointer; 
+    }
 }
 
 @media (max-width: 768px) {
